# unitaria

./: .gitignore  .nojekyll  CONTRIBUTING.md  LICENSE  README.md  bequem.py  design.py  example_tree.json  index.html  listings.json  plan.md  pyproject.toml  requirements.txt  robots.txt  search.json  sitemap.xml  tutorials.html
.github/workflows/: ci_pytest.yml  ci_ruff.yml  deploy_docs.yml  deploy_quarto_website.yml  publish-python.yml  python-publish.yml
Contribution/: Contribution.html
bequem/: circuit.py  mul.py  node.py  qubit_map.py
bequem/nodes/: basic_ops.py  integer_arithmetic.py  qsvt.py
docs/: Makefile  bequem.circuit.rst  bequem.nodes.basic_ops.rst  bequem.nodes.constant.rst  bequem.nodes.controlled_ops.rst  bequem.nodes.identity.rst  bequem.nodes.integer_arithmetic.rst  bequem.nodes.node.rst  bequem.nodes.permutation.rst  bequem.nodes.proxy_node.rst  bequem.nodes.qsvt.rst  bequem.nodes.rst  bequem.qubit_map.rst  bequem.rst  conf.py  fix_tequila_docs_name.sh  index.rst  modules.rst  tequila.inv
docs/_build/doctest/: output.txt
docs/_build/doctrees/: block_encodings.doctree  index.doctree  references.doctree
docs/_build/html/: .buildinfo  block_encodings.html  genindex.html  index.html  objects.inv  py-modindex.html  references.html  search.html  searchindex.js
docs/_build/html/_modules/: functools.html  index.html
docs/_templates/: versions.html
docs/_templates/autosummary/: class.rst  module.rst
docs/tutorials/gaussian_conv/: gaussian_conv.ipynb
examples/: example_amplified_encodings.py  example_bpx.py  example_pcg.py  gaussian_conv.ipynb  partial_differential_equation.ipynb
site_libs/bootstrap/: bootstrap-dark.min.css  bootstrap.min.css
src/bequem/: __init__.py  circuit.py  permutation.py  qubit_map.py  subspace.py  verifier.py
src/bequem/circuits/: arithmetic.py  generic_unitary.py  multiplexed_rot.py  state_prep.py
src/bequem/nodes/: __init__.py  basic_ops.py  block_concatenation.py  block_diagonal.py  constant.py  controlled_ops.py  identity.py  integer_arithmetic.py  mul.py  multilinear_node.py  node.py  nonlinear.py  permutation.py  proxy_node.py  qsvt.py  ring_ops.py
src/bequem/test/: test_qubit_map.py
src/unitaria/: __init__.py  circuit.py  poly_approx.py  subspace.py  util.py  verifier.py
src/unitaria/circuits/: arithmetic.py  generic_unitary.py  logic.py  multiplexed_rot.py  qft.py  state_prep.py
src/unitaria/estimator/: backend_estimator.py  estimator.py  simulator.py
src/unitaria/nodes/: __init__.py  abstract_node.py  block_encoding.py  fourier_transform.py  identity.py  multilinear_node.py  node.py  nonlinear.py  permutation.py  proxy_node.py
tests/: test_abstract_node.py  test_gaussian_conv.py  test_laplace.py  test_nonlin.py  test_pcg.py  test_permutation.py  test_qubit_map.py  test_subspace.py
tests/estimator/: test_backend_estimator.py  test_simulator.py
tests/nodes/: test_amplification.py  test_basic_ops.py  test_block_concatenation.py  test_block_encoding.py  test_classical.py  test_constant.py  test_controlled_ops.py  test_fourier_transform.py  test_identity.py  test_index.py  test_integer_arithmetic.py  test_measurement.py  test_nonlinear.py  test_permutation.py  test_projection.py  test_proxy.py  test_pseudoinverse.py  test_qsvt.py  test_ring.py  test_search.py
tutorials/gaussian_convolution/: gaussian_conv.html
tutorials/partial_differential_equation/: partial_differential_equation.html
unitaria-tutorials/: _quarto.yml  index.qmd
unitaria-tutorials/Contribution/: Contribution.ipynb
unitaria-tutorials/tutorials/partial_differential_equation/: partial_differential_equation.ipynb
(+124 files in other folders)
