[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "bequem"
authors = [
  {name = "Matthias Deiml", email = "matthias.deiml@uni-a.de"},
]
version = "0.0.0"
description = "A tool to construct and simulate block encodings for quantum computation"
keywords = ["quantum computing"]
dependencies = [
  "tequila-basic@git+https://github.com/tequilahub/tequila.git@devel",
  "rich==14.0.*",
  "cirq==1.5.0"
]

[project.urls]
Repository = "https://github.com/bequem-py/bequem.git"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
