[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "unitaria"
authors = [
  {name = "Matthias Deiml", email = "matthias.deiml@uni-a.de"},
]
version = "0.0.0"
description = "A tool to construct and simulate block encodings for quantum computation"
keywords = ["quantum computing"]
dependencies = [
  "tequila-basic@git+https://github.com/tequilahub/tequila.git@devel",
  "rich==14.0.*",
  "qulacs==0.6.*",
  "pyqsp==0.2.0"
]

[dependency-groups]
docs = ["sphinx", "furo"]
dev = ["pytest"]

[project.optional-dependencies]
qpic = ["qpic==1.1.*"]

[project.urls]
Repository = "https://github.com/bequem-py/bequem.git"

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py312"
